@@ -1,5 +1,5 @@
 dnl
-dnl "$Id: configure.in,v 1.23.2.20 2001/10/05 12:02:56 mike Exp $"
+dnl "$Id: configure.in,v 1.23.2.21 2001/10/17 21:13:26 mike Exp $"
 dnl
 dnl   Configuration script for HTMLDOC, an HTML document processing program.
 dnl
@@ -39,14 +39,16 @@ AC_ARG_WITH(fltk-libs, [  --with-fltk-libs        set directory for FLTK library
 
 AC_ARG_WITH(fltk-includes, [  --with-fltk-includes    set directory for FLTK includes],
     CFLAGS="-I$withval $CFLAGS"
-    CXXFLAGS="-I$withval $CXXFLAGS",)
+    CXXFLAGS="-I$withval $CXXFLAGS"
+    CPPFLAGS="-I$withval $CPPFLAGS",)
 
 AC_ARG_WITH(openssl-libs, [  --with-openssl-libs    set directory for OpenSSL library],
     LDFLAGS="-L$withval $LDFLAGS",)
 
 AC_ARG_WITH(openssl-includes, [  --with-openssl-includes    set directory for OpenSSL includes],
     CFLAGS="-I$withval $CFLAGS"
-    CXXFLAGS="-I$withval $CXXFLAGS",)
+    CXXFLAGS="-I$withval $CXXFLAGS"
+    CPPFLAGS="-I$withval $CPPFLAGS",)
 
 dnl Checks for programs...
 AC_PROG_AWK
@@ -211,7 +213,7 @@ if test x$with_x != xno; then
     AC_CHECK_LIB(Xpm,XpmCreatePixmapFromData)
 
     if test x$ac_cv_lib_fltk_numericsort = xyes; then
-        if test x"$ac_cv_prog_fltk_config" = x; then
+        if test x"$ac_cv_path_FLTKCONFIG" = x; then
 	    LIBS="../gui/libgui.a $LIBS"
 	    GUI="gui"
 	else
@@ -312,5 +314,5 @@ dnl Generate the top-level Makefile and Makedefs file...
 AC_OUTPUT(Makedefs Makefile)
 
 dnl
-dnl End of "$Id: configure.in,v 1.23.2.20 2001/10/05 12:02:56 mike Exp $".
+dnl End of "$Id: configure.in,v 1.23.2.21 2001/10/17 21:13:26 mike Exp $".
 dnl
