@@ -423,11 +423,20 @@ printers manufactured in the last 6 years support Level 2.  Level 3 output
 supports Flate compression, however very few printers support Level 3
 PostScript at this time.
 
-<H2>PS Commands</H2>
+<H2>Send Printer Commands</H2>
 
-Click in the <I>PS Commands</I> check box to enable to disable printer
-commands in the PostScript output files.  Printer commands are not supported
-for PostScript Level 1 output.
+Click in the <I>Send Printer Commands</I> check box to enable to
+disable printer commands in the PostScript output files. 
+Printer commands are not supported for PostScript Level 1
+output.
+
+<H2>Include Xerox Job Comments</H2>
+
+<P>The <VAR>Include Xerox Job Comments</VAR> check box controls
+whether or not the output files contain Xerox job comments.
+Click in the check box to enable or disable the job comments.
+
+<P>Job comments are available with all levels of PostScript output.
 
 <HR>
 
